--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/pubsub": "^1.3.3",
+    "@aws-amplify/ui": "^2.0.2",
+    "@react-native-community/netinfo": "^5.9.7",
     "amazon-ivs-player": "^1.0.0",
     "aws-amplify": "^2.2.5",
     "aws-amplify-react": "^3.1.6",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
+    "react": "^16.14.0",
     "react-dom": "^16.13.0",
+    "react-native": "^0.63.3",
     "react-popup": "^0.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "ts-react-json-table": "^0.1.2",
+    "typescript": "^4.0.5",
     "video.js": "^7.8.4"
   },
   "scripts": {
