--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/api": "^3.2.10",
     "@aws-amplify/pubsub": "^1.3.3",
     "@aws-amplify/ui": "^2.0.2",
     "@react-native-community/netinfo": "^5.9.7",
